# scanmower

./: Cargo.toml  LICENSE  README.md  ScanMower.spec  build.rs  requirements.txt  scanmower.py
.github/workflows/: rust-clippy.yml  rust.yml
assets/: scanmower.rc
src/: main.rs
