[package]
name = "scanmower"
version = "0.2.0"
edition = "2024"

description = "Nástroj pro ořez a hromadné zpracování skenů"
repository  = "https://github.com/bezverec/scanmower"
license     = "GPLv3"
authors     = ["Jan Houserek"]

[dependencies]
anyhow = "1"
eframe = { version = "0.29", features = ["default_fonts", "glow"] }
egui = "0.33"
rfd = "0.17"
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg", "tiff"] }
imageproc = "0.23"
walkdir = "2.5"
bytes = "1"
img-parts = "0.4.0"
tiff = "0.11.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
blake3 = "1.6"

[build-dependencies]
embed-resource = "3.0"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3